--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.collab-proxy": "2.0.5",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.ide.visualstudio": "2.0.21",
     "com.unity.services.authentication": "3.0.0",
     "com.unity.services.playeraccounts": "1.0.0-pre.2",
     "com.unity.textmeshpro": "3.0.6",
