--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.collab-proxy": "2.4.4",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.mobile.android-logcat": "1.4.2",
     "com.unity.services.authentication": "3.0.0",
     "com.unity.services.playeraccounts": "1.0.0-pre.2",
     "com.unity.textmeshpro": "3.0.6",
